story content added

--- a/frontend/content/success-stories/1.mdx
+++ b/frontend/content/success-stories/1.mdx
@@ -32,3 +32,5 @@ TA Lead
 <div style={{ display: 'flex', justifyContent: 'center' }}>
   <img src="/Stories/success-stories/1.2.jpeg" alt="Customer Satisfaction Growth" style={{ maxWidth: '100%', height: 'auto' }} />
 </div>
+
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
