--- a/frontend/content/success-stories/2.mdx
+++ b/frontend/content/success-stories/2.mdx
@@ -1,41 +1,37 @@
 ---
-title: "SHow Merito helped GroupM to hire across levels!"
+title: "How Merito helped GroupM to hire across levels!"
 image: "/logos/Sales & Marketing/groupM.png"
 category: "Technology & Fintech"
 ---
 
-# Scaling Tech Startup from 50 to 500 Employees
+Mindshare, Wavemaker, and Essence Mediacom — are the agencies of GroupM that are on the front line to a new era of Media Strategy And Innovation. According to COMvergence, GroupM has two of the top five global media agencies and more than $60 billion in annual media spend, providing access and scale everywhere their clients do business.
 
-## The Growth Challenge
-A promising fintech startup had developed an innovative payment solution but struggled to scale their operations. They needed to rapidly expand their team while maintaining product quality and company culture.
+Unique in services, culture, and ideas, each brand is a leader in their field. Through a range of leading businesses in advanced TV, AI-driven programmatic, eCommerce, and more, GroupM has leveraged collective intelligence to make advertising work better in the world.
 
-## Strategic Hiring Approach
-Merito designed a comprehensive scaling strategy that included:
+### Mission – Critical Priority
+With a growing business of all its media agencies, GroupM was looking to hire roles across its mid to leadership levels to help achieve efficiency in the organization.
 
-### Engineering Excellence
-- **Senior Developers**: Recruited experienced engineers with fintech domain expertise
-- **DevOps Engineers**: Built infrastructure for scalable operations
-- **QA Specialists**: Ensured product quality at scale
+### How Merito Helped
+Merito helped GroupM to identify matching candidates through its targeted sourcing approach. Our screening has helped GroupM to expedite its hiring process.
+We helped GroupM to hire key leadership roles across strategy, data, and analytics functions. The quicker hiring in its media functions helped GroupM to close key roles in time bound manner. The offer-to-joiner ratio also improved to 70%.
 
-### Product & Design
-- **Product Managers**: Guided product development and feature prioritization
-- **UX/UI Designers**: Created intuitive user experiences for growing user base
-- **Data Scientists**: Implemented analytics for user behavior insights
+### Merito’s Impact
+Working with Merito, GroupM has been able to reduce the hiring time and improve its offer-to-joiner ratio by hiring for roles including but not limited to:
 
-### Business Operations
-- **Sales Leaders**: Expanded market reach and customer acquisition
-- **HR Specialists**: Maintained company culture during rapid growth
-- **Finance Experts**: Managed financial operations and investor relations
+**Leadership Roles**
 
-## Scaling Milestones
-- **Year 1**: Grew from 50 to 150 employees with 300% user growth
-- **Year 2**: Reached 350 employees with international expansion
-- **Year 3**: Hit 500 employees with profitable operations
+- **AVP Strategy**
+- **Director Analytics**
+- **Tech Architect**
+- **Data Solutions**
+- **Client Engagement**
 
-## Key Learnings
-1. **Culture Preservation**: Maintained startup culture through values-based hiring
-2. **Skill Assessment**: Rigorous technical evaluations for quality hiring
-3. **Leadership Development**: Groomed internal talent for leadership roles
-4. **Process Optimization**: Implemented scalable HR and operational processes
+**Middle and Senior Management Roles**
 
-The startup successfully transitioned from a promising idea to a market-leading fintech company, demonstrating the power of strategic talent acquisition in driving business growth.
+- **Media Planner**
+- **SEM/PPC**
+- **Paid Social**
+- **Media Analytics**
+- **Programmatic Media**
+
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
