--- a/frontend/content/success-stories/3.mdx
+++ b/frontend/content/success-stories/3.mdx
@@ -4,39 +4,22 @@ image: "/Stories/logos/mosaic_well.webp"
 category: "Healthcare"
 ---
 
-# Revolutionizing Healthcare Recruitment in Tier-2 Cities
+Mosaic Wellness is a digital-first, multi-brand consumer goods company owned and operated under one house, with each of its brands working together toward one mission: To help Indians lead more fulfilling life surrounded by wellness and grace.
+With the help of cutting-edge technology & customer-first products, Mosaic has been simplifying health solutions for its customers.
 
-## The Healthcare Gap
-A leading healthcare network identified a significant opportunity in tier-2 cities where quality healthcare services were limited. However, attracting skilled medical professionals to these locations proved challenging.
+### Mission – critical priority
+Mosaic has been growing exponentially and with this growth, it is looking to hire key roles in its marketing and customer success teams that match the right candidate for the job. Despite the urgency of the hire, Mosaic was always very critical of the talent they hire, and often candidate goes through multiple rounds of interviews before he gets hired.
 
-## Innovative Recruitment Strategy
-Merito developed a multi-faceted approach to address healthcare talent shortages:
+### How Merito Helped
+Merito deployed role-based assessments to identify matching candidates to the job roles. The personality assessments also helped to get an in-depth perspective before their interview.
+Merito created awareness about the company among prospective candidates that helped Mosaic to identify RIGHT candidates through assessments and closed all the positions within the stipulated timelines.
 
-### Medical Professionals
-- **Doctors & Specialists**: Recruited qualified physicians with incentives for rural practice
-- **Nursing Staff**: Built dedicated nursing teams with comprehensive training
-- **Paramedical Staff**: Trained local talent for specialized healthcare roles
+### Merito’s Impact
+Working with Merito, Mosaic Wellness has been able to accelerate its growth by hiring for roles including but not limited to:
+- **Head Customer Success**
+- **Lead Amazon Marketing**
+- **Graphic Designer**
+- **Motion Designer**
 
-### Administrative & Support
-- **Hospital Administrators**: Experienced managers for operational excellence
-- **Medical Technicians**: Skilled professionals for diagnostic services
-- **IT Specialists**: Technology experts for healthcare management systems
 
-### Community Engagement
-- **Local Partnerships**: Collaborated with medical colleges for talent pipeline
-- **Training Programs**: Developed certification programs for local healthcare workers
-- **Retention Initiatives**: Created attractive work environments and benefits
-
-## Impact Created
-- **15 new healthcare facilities** established in tier-2 cities
-- **500+ healthcare professionals** recruited and trained
-- **2 million patients** served annually across expanded network
-- **40% cost reduction** in patient care through efficient operations
-
-## Success Factors
-1. **Local Talent Development**: Training programs for community healthcare workers
-2. **Incentive Structures**: Competitive packages with location-based allowances
-3. **Technology Integration**: Modern healthcare management systems
-4. **Community Partnerships**: Collaboration with local institutions and government
-
-This initiative not only addressed healthcare access in underserved areas but also created sustainable employment opportunities, demonstrating the transformative power of strategic healthcare recruitment.
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
