--- a/frontend/content/success-stories/4.mdx
+++ b/frontend/content/success-stories/4.mdx
@@ -4,39 +4,26 @@ image: "/Stories/logos/carrot.webp"
 category: "Manufacturing"
 ---
 
-# Manufacturing Excellence Through Skilled Workforce Development
+Carrot is a rewards-first discovery and engagement app exclusively for D2C brands and their consumers. High-intent shoppers are surprised and rewarded for browsing, shopping, and interacting with brands on Carrot. These rewards unlock in tiers & at the highest tier, the consumer is accorded the SuperFan status.
 
-## The Digital Transformation Challenge
-A traditional manufacturing company faced declining competitiveness due to outdated processes and lack of skilled personnel for modern manufacturing technologies.
+### Mission – critical priority
+Driven by the need to build a new and advanced shopping experience platform leveraging the new age technologies like Web3 and Tokenization, the client is looking to build their tech, product, and design teams.
+We started hiring for Carrot when they were in the early stage of their 1 to 10 journey. What they were building was in constant flux and their web presence was very minimal.
 
-## Comprehensive Workforce Strategy
-Merito implemented a holistic approach to workforce transformation:
+### How Merito Helped
+Through Merito’s structured targeting, it helped create awareness among candidates about the client and the position offered. This helped the client in attracting and hiring quality talent. We made sure the prospective employee can see and relate to the vision of Carrot.
+<br />
+By taking the bottoms-up approach, Merito hired junior roles first specifically for design-specific roles.
+A different approach was taken for tech and product functions by identifying the lead roles first and thereon building a stronger team with quality talent.
 
-### Technical Specialists
-- **Automation Engineers**: Experts in robotics and automated manufacturing systems
-- **Process Engineers**: Specialists in lean manufacturing and quality control
-- **Maintenance Technicians**: Skilled professionals for equipment upkeep
+### Merito’s Impact
+Working with Merito, Carrot has been able to accelerate its growth by hiring for roles including but not limited to:
+- **CTO**
+- **Lead Developers**
+- **Product Manager**
+- **Product Growth**
+- **Product Designer**
+- **Graphic Designer**
 
-### Digital Integration
-- **IoT Specialists**: Implemented Internet of Things for smart manufacturing
-- **Data Analysts**: Analytics experts for production optimization
-- **Cybersecurity Experts**: Protected digital manufacturing infrastructure
 
-### Leadership & Management
-- **Operations Managers**: Experienced leaders for digital transformation
-- **Quality Assurance Heads**: Ensured compliance with international standards
-- **Supply Chain Managers**: Optimized procurement and logistics
-
-## Transformation Results
-- **60% improvement** in production efficiency through automation
-- **45% reduction** in manufacturing defects and waste
-- **35% increase** in on-time deliveries
-- **50% growth** in export orders due to quality certifications
-
-## Implementation Framework
-1. **Skills Assessment**: Comprehensive evaluation of existing workforce capabilities
-2. **Training Programs**: Industry 4.0 certification and upskilling initiatives
-3. **Technology Adoption**: Gradual implementation of digital manufacturing tools
-4. **Change Management**: Cultural transformation for technology acceptance
-
-The company's successful transition to smart manufacturing not only improved operational efficiency but also positioned them as leaders in the digital manufacturing space, creating new growth opportunities.
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
