--- a/frontend/content/success-stories/6.mdx
+++ b/frontend/content/success-stories/6.mdx
@@ -4,39 +4,24 @@ image: "/logos/Manufacturing & Engg/Shyam Steel.jpg"
 category: "Education & EdTech"
 ---
 
-# Educational Institution's Digital Transformation Journey
+Established in 1953, Shyam Steel Group is one of the leading TMT Bar Manufacturers and Suppliers in India, manufacturing TMT Rebar, Billets, and Sponge Iron. With an annual turnover of Rs 3000 Crores, Shyam Steel is associated with the largest institutional projects in India.<br />
+Guided by a philosophy to produce safe and sustainable steel, it is a pioneer in quality production of steel.
 
-## The Digital Education Challenge
-A prestigious educational institution recognized the need to modernize their teaching methodologies and administrative processes to meet evolving student expectations and competitive pressures.
+### Mission-critical priority
+Driven by the need to expand its business portfolio, Shyam Steel is on a journey to create an omnichannel e-commerce platform catering to the construction and architecture industry. With this journey comes the need to build a team from scratch for which they need candidates with the right skill set who would help them scale exponentially.
 
-## Comprehensive Digital Strategy
-Merito facilitated the institution's transformation through targeted technology talent acquisition:
+### How Merito helped
+With Merito’s consultative approach, Shyam Steel was able to close most of its positions in a record timeframe. Merito brought light to their vision and venture by creating awareness and helping them to target the right candidates for the positions.<br/>
+Through Merito’s screening and assessment, the average time to hire a candidate was reduced ensuring a fast and accurate way of hiring. By identifying the candidates who fit their culture, Shyam Steel can engage in efficient employee retention. 
 
-### Technology Infrastructure
-- **IT Directors**: Oversaw digital infrastructure development and cybersecurity
-- **Systems Administrators**: Managed campus-wide technology systems
-- **Network Engineers**: Implemented reliable connectivity solutions
+### Merito’s Impact
+Working with Merito, Shyam Steel has been able to build a tech team by hiring for roles including but not limited to:
 
-### Educational Technology
-- **EdTech Specialists**: Developed digital learning platforms and tools
-- **Learning Designers**: Created engaging online and blended learning experiences
-- **Data Scientists**: Analyzed student performance and learning outcomes
+- **Program Manager**
+- **Project Manager**
+- **Business Analyst**
+- **UI/UX Developer**
+- **MEAN Full Stack Developer**
 
-### Administrative Digitalization
-- **Digital Operations Managers**: Streamlined administrative processes
-- **E-Learning Coordinators**: Managed online course delivery and student support
-- **Analytics Experts**: Provided insights for institutional decision-making
 
-## Transformation Outcomes
-- **70% increase** in student engagement through digital learning tools
-- **50% reduction** in administrative processing time
-- **200+ online courses** developed and deployed
-- **35% improvement** in student satisfaction scores
-
-## Implementation Approach
-1. **Needs Assessment**: Comprehensive evaluation of current capabilities and gaps
-2. **Phased Implementation**: Gradual technology adoption with training support
-3. **Faculty Development**: Extensive training programs for digital teaching skills
-4. **Student-Centric Design**: Technology solutions focused on enhancing learning experience
-
-The institution's successful digital transformation not only improved operational efficiency but also positioned them as a leader in modern education, attracting students seeking innovative learning experiences.
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
