--- a/frontend/content/success-stories/5.mdx
+++ b/frontend/content/success-stories/5.mdx
@@ -4,39 +4,24 @@ image: "/logos/Sales & Marketing/Bakers.avif"
 category: "Sales & Marketing"
 ---
 
-# Building a High-Performance Sales Team from Scratch
+The Baker’s Dozen (TBD) is India’s largest hand-crafted Artisan bakery brand, known for the authenticity of products and processes, with 40+ stores and more than 1000 touchpoints online & offline in the marketplace.
+Most of their products are made with all-natural ingredients, without preservatives, and are 100% wholewheat.
 
-## The Sales Challenge
-A fast-growing consumer goods company needed to build a sales team from the ground up to capitalize on market opportunities. They lacked experienced sales leadership and struggled with inconsistent performance.
+### Mission – critical priority
+With Baker’s Dozen going through a big transformation and massive scale-up post their seed funding, the client wants to hire key roles in the business and support functions to accelerate its growth and elevate the customer experience.
 
-## Strategic Team Building
-Merito designed a comprehensive sales organization development program:
+### How Merito Helped
+Through Merito’s targeted sourcing, Baker’s Dozen was able to identify the matching candidates effectively and efficiently.
+Merito helped in closing all the positions within the average time to hire of 3-4 weeks including key positions of Vice President Finance which took a 2 weeks’ time.
 
-### Sales Leadership
-- **Sales Directors**: Experienced leaders with track records in scaling sales teams
-- **Regional Managers**: Territory experts with local market knowledge
-- **Sales Trainers**: Specialists in sales methodology and coaching
+### Merito’s Impact
+Working with Merito, Baker’s Dozen has been able to accelerate its growth by hiring for roles including but not limited to:
+- **VP Finance**
+- **Head of Marketspace**
+- **Head D2C**
+- **Manager – Performance Marketing**
+- **Data Analysts**
+- **HR Operations**
 
-### Field Sales Force
-- **Key Account Managers**: Relationship builders for major retail partners
-- **Territory Sales Executives**: Local market penetration specialists
-- **Channel Partners**: Experts in distributor and wholesaler management
 
-### Support Functions
-- **Sales Operations**: Process optimization and CRM implementation
-- **Business Intelligence**: Sales analytics and forecasting experts
-- **Marketing Coordinators**: Lead generation and campaign support
-
-## Performance Achievements
-- **300% revenue growth** in 18 months through expanded market reach
-- **50 new distributor partnerships** established nationwide
-- **85% improvement** in sales team productivity
-- **40% reduction** in customer acquisition costs
-
-## Success Methodology
-1. **Competency Framework**: Defined clear skills and behaviors for success
-2. **Structured Training**: Comprehensive onboarding and continuous development
-3. **Performance Management**: Data-driven coaching and incentive systems
-4. **Technology Enablement**: CRM and sales automation tools
-
-The company's sales transformation not only achieved remarkable growth but also established a scalable sales model that continues to drive sustainable business expansion.
+<hr style={{ border: '1.5px solid #333', margin: '5px 0' }} />
